tests/js_error/source_locations/expression/super_member/get_super_property.exp
Error: 
  ┌ source_locations/expression/super_member/get_super_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get foo (source_locations/expression/super_member/get_super_property.js:3:11)
  at test (source_locations/expression/super_member/get_super_property.js:9:10)
  at <global> (source_locations/expression/super_member/get_super_property.js:14:1)