tests/js_error/source_locations/expression/super_member/get_super_property.js
class B {
  get foo() {
    throw new Error();
  }
}

class C extends B {
  test() {
    super['fo' + 'o']
  }
}

var c = new C();
c.test();